It works now. Single bug left
For some reason it adds a comma as the first thing in every entry EXEPT the first one.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +10,47 @@
     <title>Campsite registration</title>
 
 </head>
+
+
+
 <body>
     <div class="container">
         <h1>Campsite registration</h1>
-        <input type="text" id="nameInput" placeholder="First and middle names ">
+
+        First and middle names:
+        &nbsp
+        <input type="text" id="firstNameInput" placeholder="First and middle names">
+        <br>
+
+
+        Last names:
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp
+        <input type="text" id="lastNameInput" placeholder="Last names">
+        <br>
+
+
+        Country of origin:
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        <input type="text" id="countryInput" placeholder="Country of origin">
+        <br>
+
+        <br>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp
         <button id="downloadButton">Save</button>
+
+
+        <h5> TODO: information required by GDPR about what we will use this info for </h5>
+
     </div>
+
     <script src="script.js"></script>
 </body>
+
+
+
 </html>
