Local storage now working

--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
 
 </head>
 
+<!--
+        <button id="downloadButton">Download</button>
+        <button id="deleteButton">DELETE LOCAL STORAGE</button>
+        <br>
+        <br>
+-->
 
 
 <body>
+
+
+
     <div class="container">
+
+        <!-- PLACE BUTTONS HERE -->
+        <button id="downloadButton">Download</button>
+        <button id="deleteButton">DELETE LOCAL STORAGE</button>
+        <br>
+        <br>
+
+
         <h1>Campsite registration</h1>
 
         First and middle names:
@@ -41,7 +58,7 @@
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         &nbsp
-        <button id="downloadButton">Save</button>
+        <button id="saveButton">Save</button>
 
 
         <h5> TODO: information required by GDPR about what we will use this info for </h5>
